--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "input-token-web",
-  "version": "0.1.0-rc1",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
